methods.slug.SlugTracking.scala.error
Compilation error:
SlugTracking:12: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
      return getGroundColor()
                           ^SlugTracking:13: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
      return y
             ^