methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
  var x=isFacingWall()
  if(x==true){
        return false;
  }
   var y=getGroundColor    
      if(y!=Color.green){
        backward();
        return false
      }
      return getGroundColor()
      return y
    
}
        
        
        
     
      